--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <meta charset="utf-8">
     </head>
     <body>
+        <h1> Gooi </h1>
         <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </body>
+
 </html>
