--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1> Gooi </h1>
-        <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+        <script type="text/javascript" src="/dist/bundle.js" charset="utf-8"></script>
     </body>
 
 </html>
