--- a/template.html
+++ b/template.html
@@ -1,10 +1,9 @@
+<!DOCTYPE HTML>
 <html>
     <head>
         <meta charset="utf-8">
     </head>
     <body>
         <h1> Gooi </h1>
-        <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </body>
-
 </html>
